@@ -493,7 +493,6 @@ IG_BleuBox	39
 SC_ALL -1
 SC_STONE	0
 SC_FREEZE	1
-SC_STAN	2
 SC_STUN	2
 SC_SLEEP	3
 SC_POISON	4
@@ -518,7 +517,7 @@ SC_SIGNUMCRUCIS	31
 SC_INCREASEAGI	32
 SC_DECREASEAGI	33
 SC_SLOWPOISON	34
-SC_IMPOSITIO  	35
+SC_IMPOSITIO	35
 SC_SUFFRAGIUM	36
 SC_ASPERSIO	37
 SC_BENEDICTIO	38
@@ -536,7 +535,7 @@ SC_ENERGYCOAT	49
 SC_BROKENARMOR	50
 SC_BROKENWEAPON	51
 SC_HALLUCINATION	52
-SC_WEIGHT50 	53
+SC_WEIGHT50	53
 SC_WEIGHT90	54
 SC_ASPDPOTION0	55
 SC_ASPDPOTION1	56
@@ -569,7 +568,7 @@ SC_SPELLBREAKER	82
 SC_AUTOSPELL	83
 SC_SIGHTTRASHER	84
 SC_AUTOBERSERK	85
-SC_SPEARSQUICKEN	86
+SC_SPEARQUICKEN	86
 SC_AUTOCOUNTER	87
 SC_SIGHT	88
 SC_SAFETYWALL	89
@@ -587,7 +586,7 @@ SC_VOLCANO	100
 SC_DELUGE	101
 SC_VIOLENTGALE	102
 SC_WATK_ELEMENT	103
-SC_LANDPROTECTOR	104
+SC_ARMOR	104
 SC_ARMOR_ELEMENT	105
 SC_NOCHAT	106
 SC_BABY	107
@@ -611,7 +610,7 @@ SC_CHASEWALK	124
 SC_REJECTSWORD	125
 SC_MARIONETTE	126
 SC_MARIONETTE2	127
-SC_MOONLIT	128
+SC_CHANGEUNDEAD	128
 SC_JOINTBEAT	129
 SC_MINDBREAKER	130
 SC_MEMORIZE	131
@@ -648,7 +647,7 @@ SC_WINKCHARM	161
 SC_CLOSECONFINE	162
 SC_CLOSECONFINE2	163
 SC_DANCING	164
-SC_LULLABY	165
+SC_ELEMENTALCHANGE	165
 SC_RICHMANKIM	166
 SC_ETERNALCHAOS	167
 SC_DRUMBATTLE	168
@@ -660,7 +659,7 @@ SC_WHISTLE	173
 SC_ASSNCROS	174
 SC_POEMBRAGI	175
 SC_APPLEIDUN	176
-SC_UGLYDANCE	177
+SC_MODECHANGE	177
 SC_HUMMING	178
 SC_DONTFORGETME	179
 SC_FORTUNE	180
@@ -709,6 +708,32 @@ SC_SKE	222
 SC_KAITE	223
 SC_SWOO	224
 SC_SKA	225
+SC_TKREST	226
+SC_MIRACLE	227
+SC_MADNESSCANCEL	228
+SC_ADJUSTMENT	229
+SC_INCREASING	230
+SC_GATLINGFEVER	231
+SC_TATAMIGAESHI	232
+SC_UTSUSEMI	233
+SC_BUNSINJYUTSU	234
+SC_KAENSIN	235
+SC_SUITON	236
+SC_NEN	237
+SC_KNOWLEDGE	238
+SC_SMA	239
+SC_FLING	240
+SC_AVOID	241
+SC_CHANGE	242
+SC_BLOODLUST	243
+SC_FLEET	244
+SC_SPEED	245
+SC_DEFENCE	246
+SC_INCAGIRATE	247
+SC_INCDEXRATE	248
+SC_JAILED	249
+SC_ENCHANTARMS	250
+SC_MAGICALATTACK	251
 
 e_gasp	0
 e_what	1
