@@ -8550,7 +8550,7 @@ int atcommand_homshuffle(const int fd, struct map_session_data* sd, const char* 
 	struct homun_data *hd;
 	int lv, i, skillpts;
 	unsigned int exp;
-	struct skill b_skill;
+	struct skill b_skill[MAX_HOMUNSKILL];
 	TBL_PC* tsd = sd;
 
 	nullpo_retr(-1, sd);
@@ -8591,6 +8591,7 @@ int atcommand_homshuffle(const int fd, struct map_session_data* sd, const char* 
 	hd->homunculus.exp = exp;
 	memcpy(&hd->homunculus.hskill, &b_skill, sizeof(b_skill));
 	hd->homunculus.skillpts = skillpts;
+	clif_homskillinfoblock(hd->master);
 	status_calc_homunculus(hd,0);
 	status_percent_heal(&hd->bl, 100, 100);
 	clif_misceffect2(&hd->bl,568);
