@@ -276,7 +276,7 @@ void initChangeTables(void)
 	set_sc(DC_SERVICEFORYOU, SC_SERVICE4U, SI_BLANK, SCB_MAXSP|SCB_PC);
 	add_sc(NPC_DARKCROSS, SC_BLIND);
 	add_sc(NPC_GRANDDARKNESS, SC_BLIND);
-	add_sc(NPC_STOP, SC_STOP);
+	set_sc(NPC_STOP, SC_STOP, SI_STOP, SCB_NONE);
 	set_sc(NPC_BREAKWEAPON, SC_BROKENWEAPON, SI_BROKENWEAPON, SCB_NONE);
 	set_sc(NPC_BREAKARMOR, SC_BROKENARMOR, SI_BROKENARMOR, SCB_NONE);
 	set_sc(NPC_CHANGEUNDEAD, SC_CHANGEUNDEAD, SI_UNDEAD, SCB_DEF_ELE);
